# simple-calculator

./: .gitignore  README.md  calculator_server.py  mcp.example.json  pyproject.toml
tools/: __init__.py  calculator_tools.py  toolhandler.py
